# running-maodie

./: .gitignore  CMakeLists.txt  代码逐句解释.md  角色动画状态机.md  项目架构说明.md
docs/: ARCHITECTURE.md
outputs/running-maodie-design-ppt/: narrative_plan.md
resources/audio/bgm/: Ferrari.m4a  Move Your Body.m4a  My Soul.m4a  Salt.m4a  世上最小的哈基米.m4a  哈基米的约定.m4a  哈基萌卫.m4a  孤高曼波.m4a  小美满.m4a  我无怨无悔.m4a  曼波之爱.m4a  来去曼波.m4a  气一直哈.m4a  舌尖上的基米.m4a  西部快哈手.m4a  黑客の小曲.m4a
src/: main.cpp
src/animation/: playeranimator.cpp  playeranimator.h
src/app/: mainwindow.cpp  mainwindow.h
src/config/: gameconfig.h
src/entities/: collectible.cpp  collectible.h  obstacle.cpp  obstacle.h  player.cpp  player.h
src/game/: gamecanvas.cpp  gamecanvas.h  gamecontroller.cpp  gamecontroller.h
src/managers/: audiomanager.cpp  audiomanager.h  resourcemanager.cpp  resourcemanager.h
src/pages/: gamepage.cpp  gamepage.h  homepage.cpp  homepage.h
src/systems/: collisionsystem.cpp  collisionsystem.h  scoresystem.cpp  scoresystem.h  spawnsystem.cpp  spawnsystem.h
src/ui/: hudwidget.cpp  hudwidget.h  musicplayerwidget.cpp  musicplayerwidget.h
